Initial implementation of checker + tests